Styled buttons, centered the subtitle

--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
 
 h1 {
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
         
+}
+
+#subtitle {
+    text-align: center;
 }
 
 #scoreboard {
@@ -18,5 +22,18 @@ h1 {
 
 #gameScreen {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-evenly;
+}
+
+#scoreboard {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+button {
+    font-weight: 500;
+    background-color: rgb(120, 120, 120);
+    padding: 5px;
+    border-width: 3px;
+    border-color: rgb(145, 145, 145);
 }
